--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,10 @@ input, textarea {
   letter-spacing: 0.75px;
 
   caret-color: var(--theme-color);
+
+  @media screen and (min-width: 1140px) {
+    font-size: 1rem;
+  }
 }
 
 button {
