--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -1,30 +1,33 @@
 .movie_container {
     background-color: var(--secondary-color);
     width: 100%;
+    height: auto;
+    padding: 0 0 2rem 0;
 
     border-radius: 0.5rem;
-    // flex: 1;
-    // flex-basis: 400px;
+    flex: 1 1 300px;
 
-    @media screen and (min-width: 480px) {
-        max-width: 340px;
+    @media screen and (min-width: 375px) {
+        max-width: 300px;
         // flex-basis: 340px;
         // flex: 0 0 calc(50% - 1rem);
     }
 
     @media screen and (min-width: 768px) {
-        max-width: 330px;
+        max-width: 300px;
         // flex: 0 0 calc(33.3% - 1rem);
         // flex-basis: 330px;
     }
 
     .movie_thumbnail {
         width: 100%;
+        // height: 430px;
 
         img {
             width: 100%;
+            height: 100%;
             height: 300px;
-            object-fit: cover;
+            // object-fit: co;
             border-radius: 0.5rem 0.5rem 0 0;
         }
     }
