--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -11,7 +11,15 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    // border: 1px solid red;
+    width: 100%;
+
+    @media screen and (min-width: 768px) {
+        width: 90%;
+    }
+
+    @media screen and (min-width: 1440px) {
+        width: 60%;
+    }
 }
 
 .pagination_controls {
@@ -24,10 +32,9 @@
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
-    justify-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 0 auto;
-    border: 1px solid red;
+    width: 100%;
 }
 
 .movies_title {
@@ -51,4 +58,11 @@
     &:hover {
         outline: 2px solid var(--secondary-color);
     }
+}
+
+.sort_controls {
+    display: flex;
+    border: 1px solid red;
+    justify-content: flex-end;
+    gap: 1rem;
 }
