--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -18,7 +18,7 @@
     }
 
     @media screen and (min-width: 1440px) {
-        width: 60%;
+        width: 90%;
     }
 }
 
@@ -62,7 +62,33 @@
 
 .sort_controls {
     display: flex;
-    border: 1px solid red;
     justify-content: flex-end;
     gap: 1rem;
+}
+
+
+.sort-controls {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.select-box {
+  margin: 0 10px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.sort-button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.sort-button:hover {
+  background-color: #0056b3;
 }
