--- a/src/pages/AddMovie/AddMovie.scss
+++ b/src/pages/AddMovie/AddMovie.scss
@@ -1,14 +1,18 @@
 .addmovie_container {
-    padding: 1rem;
+    padding: 2rem 1rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     @media screen and (min-width: 500px){
         padding: 2rem;
     }
+}
 
-    @media screen and (min-width: 768px){
-        display: flex;
-        justify-content: center;
-    }
+.addmovie {
+    width: 100%;
+    max-width: 800px;
 }
 
 .addmovie_wrapper {
@@ -21,10 +25,18 @@
     padding: 2rem 1rem;
     border-radius: 0.5rem;
     width: 100%;
-    max-width: 800px;
+    
 
     @media screen and (min-width: 768px){
-        padding: 4rem 2rem;
+        padding: 3rem 2rem;
+
+        h1 {
+            margin-bottom: 1rem;
+        }
+
+        .btn {
+            margin-top: 1.5rem;
+        }
     }
 
 
@@ -33,18 +45,30 @@
         flex-direction: column;
         gap: 0.5rem;
 
-
-        @media screen and (min-width: 768px){
-            gap: 0.75rem;
+        input, textarea {
+            font-size: 0.75rem;
         }
 
         label {
-            font-size: 0.85rem;
-            opacity: 0.5;
+            font-size: 0.75rem;
+            opacity: 0.6;
+        }
+
+        @media screen and (min-width: 768px){
+            gap: 0.75rem;
+
+            label, input, textarea {
+                font-size: 0.9rem;
+            }
         }
     }
 
     h1 {
         color: var(--theme-color);
+        font-size: 1.25rem;
     }
+}
+
+button:disabled {
+    cursor: not-allowed;
 }
