--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,9 +3,119 @@
     background-color: var(--secondary-color);
     padding: 1rem;
 
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    box-shadow: 1px 2px 10px rgba(0,0,0,0.5);
+
     .navbar_logo {
         height: 100%;
         display: flex;
         align-items: center;
+        justify-content: space-between;
+
+        a {
+            text-decoration: none;
+            color: #FFF;
+
+            h3 {
+                font-size: 1rem;
+            }
+        }
+
+        .navbar_hamburger {
+
+            &:hover,
+            &:focus {
+                cursor: pointer;
+                color: var(--theme-color);
+            }
+        }
+    }
+}
+
+.pop_up {
+    background-color: rgba(0,0,0,0.7);
+
+    position: fixed;
+    right: 0;
+    top: 70px;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+
+    display: flex;
+    justify-content: flex-end;
+
+    .pop_wrapper {
+        width: 80%;
+        height: fit-content;
+        background-color: #FFF;
+        margin: 1rem;
+        border-radius: 0.5rem;
+        color: #000;
+        // padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+
+        .user_info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+            padding: 1rem;
+
+            .avatar_container {
+                height: 150px;
+                width: 150px;
+                background-color: aliceblue;
+                border-radius: 50%;
+                // color: #FFF;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .user_details {
+                text-align: center;
+
+                p {
+                    color: var(--theme-color);
+                }
+            }
+        }
+
+        .controls {
+            display: flex;
+            flex-direction: column;
+
+            & > div {
+                padding: 1rem;
+                border-bottom: 1px solid #000;
+
+                &:hover,
+                &:focus {
+                    box-shadow: 1px 0px 10px rgba(187,134,252, 0.5);
+                    cursor: pointer;
+                }
+
+                p {
+                    font-size: 0.85rem;
+                }
+            }
+
+            & > div:nth-child(1) {
+                border-top: 1px solid #000;
+                // padding-top: 1rem;
+            }
+
+            & > div:nth-last-child(1) {
+                border-bottom: none;
+            }
+        }
     }
 }
