--- a/src/components/SortControlsMobile/SortControlsMobile.scss
+++ b/src/components/SortControlsMobile/SortControlsMobile.scss
@@ -1,6 +1,8 @@
 .sort_small {
     display: flex;
+    justify-content: flex-end;
     gap: 0.5rem;
+    width: 100%;
 
     select {
         padding: 0.5rem 1rem;
