--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 :root {
   --primary-color: #121212;
   --secondary-color: #323232;
+  --tertiary-color: #FF7597;
   --theme-color: #BB86Fc;
   --primary-font: 'Montserrat', sans-serif;
 }
