--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -1,52 +1,56 @@
 .movie_container {
     background-color: var(--secondary-color);
-    width: 100%;
     height: auto;
-    padding: 0 0 2rem 0;
-
+    width: auto;
     border-radius: 0.5rem;
-    flex: 1 1 280px;
+    width: 100%;
 
     @media screen and (min-width: 375px) {
-        flex: 1 1 300px;
         max-width: 300px;
-        // flex-basis: 340px;
-        // flex: 0 0 calc(50% - 1rem);
-    }
-
-    @media screen and (min-width: 768px) {
-        flex: 1 1 300px;
-        max-width: 300px;
-        // flex: 0 0 calc(33.3% - 1rem);
-        // flex-basis: 330px;
     }
 
     .movie_thumbnail {
         width: 100%;
-        // height: 430px;
+        height: 380px;
+
+        &:hover,
+        &:focus {
+            cursor: pointer;
+        }
 
         img {
             width: 100%;
             height: 100%;
-            height: 300px;
-            // object-fit: co;
             border-radius: 0.5rem 0.5rem 0 0;
         }
     }
 
     .movie_details {
-        padding: 0 0.5rem;
-        height: 100px;
+        padding: 0.5rem 0.5rem;
+        height: 80px;
 
         .movie_info {
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 0.5rem;
-            margin-top: 1rem;
 
             .title {
-                line-height: 22px;
+                line-height: 18px;
+                font-size: 0.8rem;
+                margin-bottom: 0.5rem;
+
+                &:hover,
+                &:focus {
+                    cursor: pointer;
+                    opacity: 0.7;
+                }
+            }
+
+            .movie_year {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
             }
 
             small {
@@ -57,20 +61,20 @@
 }
 
 .favorite_filled {
-    color: var(--theme-color);
+    color: var(--tertiary-color);
 
     &:focus,
     &:hover {
         cursor: pointer;
-        transform: scale(1.1);
+        transform: scale(1.2);
     }
 }
 
 .favorite_empty {
-    color: var(--theme-color);
+    color: var(--tertiary-color);
     &:focus,
     &:hover {
         cursor: pointer;
-        transform: scale(1.1);
+        transform: scale(1.2);
     }
 }
