--- a/src/pages/DeleteMovie/DeleteMovie.scss
+++ b/src/pages/DeleteMovie/DeleteMovie.scss
@@ -4,7 +4,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-    border: 1px solid green;
 
     background-color: rgba(0,0,0,0.7);
     display: flex;
@@ -19,13 +18,36 @@
 
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
         max-width: 450px;
+
+        @media screen and (min-width: 480px) {
+            padding: 2rem;
+        }
+
+        p {
+            color: rgba(255,255,255,0.5);
+            font-size: 0.85rem;
+        }
+
+        h1 {
+            font-size: 1.25rem;
+            color: var(--tertiary-color);
+        }
 
         .delete_controls {
             display: flex;
             flex-direction: column;
             gap: 1rem;
+
+            .delete_btn {
+                background-color: var(--tertiary-color);
+
+                &:hover,
+                &:focus {
+                    opacity: 0.8;
+                }
+            }
         }
     }
 }
