--- a/src/pages/MovieDetail/MovieDetail.scss
+++ b/src/pages/MovieDetail/MovieDetail.scss
@@ -1,83 +1,3 @@
-  header {
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
-.detail_container {
-    max-width: 800px;
-    background-color: var(--secondary-color);
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin: 1rem;
-    border-radius: 0 0 0.5rem 0.5rem;
-}
-
-.movie-details {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 1rem;
-
-    @media screen and (min-width: 500px) {
-        flex-direction: row;
-
-        .poster {
-            max-width: 40%;
-        }
-
-        .movie-info {
-            max-width: 60%;
-        }
-    }
-
-    .poster {
-        max-width: 375px;
-        width: 100%;
-        height: 430px;
-        align-self: center;
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .movie-info {
-        width: 100%;
-        padding: 1rem;
-
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-    
-    p {
-        font-size: 0.85rem;
-
-        span {
-            // color: rgba(255,255,255,0.4);
-            color: var(--theme-color);
-            opacity: 0.4;
-        }
-    }
-}
-
-.overview {
-    padding: 0 1rem 1rem;
-    
-
-    p {
-        font-size: 0.85rem;
-        margin-top: 0.5rem;
-    }
-}
-
-.detail_title {
-    font-size: 1.25rem;
-    color: var(--theme-color);
-}
-
 .moviedetail {
     min-height: 100vh;
     padding-bottom: 1rem;
@@ -88,27 +8,151 @@
     justify-content: center;
     align-items: center;
 
-    border: 1px solid red;
-
-    @media screen and (min-width: 500px) {
+    @media screen and (min-width: 480px) {
         padding: 0 1rem;
     }
 
     @media screen and (min-width: 768px) {
-        padding: 0 2rem;
+        justify-content: flex-start;;
+    }
+}
+  
+header {
+    color: #fff;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+.detail_container {
+    max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 1rem;
+    border-radius: 0 0 0.5rem 0.5rem;
+
+    @media screen and (min-width: 480px) {
+        gap: 2rem;
+    }
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        gap: 1rem;
+    }
+}
+
+.moviedetail_con_wrapper {
+    background-color: var(--secondary-color);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 0.5rem;
+    padding: 1rem;
+
+    @media screen and (min-width: 480px) {
+        padding: 2rem 1rem;
+    }
+}
+
+.moviedetail_back {
+    width: 100%;
+    .back_controls {
+        padding: 1rem;
+        margin: unset;
+    }
+}
+
+.moviedetails {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    .poster {
+        max-width: 375px;
+        width: 100%;
+        height: 380px;
+        align-self: center;
+        border-radius: 0.5rem;
+
+        @media screen and (min-width: 375px) {
+            width: 300px;
+        }
+
+        @media screen and (min-width: 768px) {
+            width: 380px;
+            height: 100%;
+            max-height: 60vh;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            border-radius: 0.5rem;
+        }
+    }
+}
+
+.movieinfo {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
+.detail_title {
+    font-size: 1.25rem;
+    color: var(--theme-color);
+    margin-bottom: 0.5rem;
+}
+
+.detail_desc {
+    p {
+        font-size: 0.85rem;
+        color: #fff;
+        opacity: 0.5;
+
+        @media screen and (min-width: 768px) {
+            font-size: 1rem;
+        }
+    }
+
+    span {
+        font-size: 0.85rem;
+
+        @media screen and (min-width: 768px) {
+            font-size: 1rem;
+        }
+    }
+}
+
+.detail_desc_p {
+    font-size: 0.85rem;
+    color: #fff;
+    opacity: 0.5;
+    line-height: 19px;
+
+    @media screen and (min-width: 768px) {
+        font-size: 1rem;
+        line-height: 23px;
     }
 }
 
 .btn_container {
-    padding: 1rem;
     display: flex;
+    gap: 0.5rem;
+    justify-content: center;
 
-    .edit_btn {
-        width: 100px;
-    }
-
-    @media screen and (min-width: 500px) {
-        justify-content: flex-end;
+    .delete_btn {
+        background-color: var(--tertiary-color);
+        &:hover,
+        &:focus {
+            opacity: 0.8;
+        }
     }
 }
 
+.moviedetails_loading {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
