--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -9,6 +9,11 @@
         max-width: 300px;
     }
 
+    &:hover,
+    &:focus {
+        // transform: scale(1.1);
+    }
+
     .movie_thumbnail {
         width: 100%;
         height: 380px;
