--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -60,10 +60,13 @@
         margin: 1rem;
         border-radius: 0.5rem;
         color: #000;
-        // padding: 1rem;
         display: flex;
         flex-direction: column;
         gap: 2rem;
+
+        @media screen and (min-width: 480px) {
+            width: 300px;
+        }
 
         .user_info {
             display: flex;
