--- a/src/components/SortControls/SortControls.scss
+++ b/src/components/SortControls/SortControls.scss
@@ -1,23 +1,32 @@
+.sort_small {
+    display: flex;
+    gap: 0.5rem;
+    width: 100%;
 
+    select {
+        padding: 0.5rem 1rem;
+        height: 100%;
+        outline: none;
+        border: none;
+        height: 100%;
+        max-width: 200px;
+        border-radius: 0.5rem 0 0 0.5rem;
+        background-color: var(--primary-color);
+        border: 1px solid var(--secondary-color);
+        color: #FFF;
+        opacity: 0.6;
+        font-family: var(--primary-font);
+        font-size: small;
 
-.sort-controls {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
+        optgroup {
+            font-size: 0.75rem;
+        }
+        
+    }
 
-  label {
-    font-size: 0.9rem;
-  }
-}
-
-.select-box {
-  margin: 0 0.5rem;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem 0 0 0.5rem;
-}
-
-.sort-button {
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 0 0.5rem 0.5rem 0;
+    button {
+        border-radius: 0 0.5rem 0.5rem 0;
+        height: 100%;
+        padding: 0.5rem 1rem;
+    }
 }
