--- a/src/pages/MovieDetail/MovieDetail.scss
+++ b/src/pages/MovieDetail/MovieDetail.scss
@@ -106,6 +106,9 @@ header {
 }
 
 .detail_desc {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
     p {
         font-size: 0.85rem;
         color: #fff;
@@ -155,4 +158,15 @@ header {
     display: flex;
     justify-content: center;
     margin-top: 100px;
+}
+
+.moviedetail_header {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.favorite {
+    color: #9A7D31;
 }
