--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -19,6 +19,10 @@
 
     .add_btn {
         font-size: 0.75rem;
+
+        @media screen and (min-width: 768px) {
+            font-size: 0.9rem;
+        }
     }
 }
 
@@ -80,15 +84,16 @@
 // sort controls
 .sorts_large {
     display: none;
-
-    @media screen and (min-width: 768px) {
-        display: block;
-    }
 }
 
 .sorts_small {
-    width: 100%;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 600px) {
         display: none
+    }
+}
+
+.medium_sorts {
+    @media screen and (max-width: 600px) {
+        display: none;
     }
 }
