Refactor: Updated the thumbnail images to get them from the database

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
   --secondary-color: #323232;
   --tertiary-color: #FF7597;
   --theme-color: #BB86Fc;
+  --alert-color: #03DAC5;
   --primary-font: 'Montserrat', sans-serif;
 }
 
