--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -22,7 +22,6 @@
 
         .navbar_controls {
             display: flex;
-            // border: 1px solid red;
             align-items: center;
             gap: 0.75rem;
         }
@@ -49,7 +48,6 @@
 
 .pop_up {
     background-color: rgba(0,0,0,0.7);
-
     position: fixed;
     right: 0;
     top: 70px;
@@ -63,16 +61,17 @@
     .pop_wrapper {
         width: 80%;
         height: fit-content;
-        background-color: #FFF;
+        background-color: var(--secondary-color);
         margin: 1rem;
         border-radius: 0.5rem;
-        color: #000;
+        color: #FFF;
         display: flex;
         flex-direction: column;
         gap: 2rem;
+        box-shadow: 5px 5px 10px rgba($color: var(--theme-color), $alpha: 1.0);
 
         @media screen and (min-width: 480px) {
-            width: 300px;
+            width: 250px;
         }
 
         .user_info {
@@ -92,6 +91,10 @@
             .user_details {
                 text-align: center;
 
+                small {
+                    opacity: 0.6;
+                }
+
                 p {
                     color: var(--theme-color);
                 }
@@ -102,24 +105,30 @@
             display: flex;
             flex-direction: column;
 
+            .controls_nav {
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+            }
+
             & > div {
                 padding: 1rem;
                 border-bottom: 1px solid #000;
 
                 &:hover,
                 &:focus {
-                    box-shadow: 1px 0px 10px rgba(187,134,252, 0.5);
+                    box-shadow: 1px 0px 10px rgba(0,0,0,0.5);
                     cursor: pointer;
                 }
 
                 p {
                     font-size: 0.85rem;
+                    opacity: 0.6;
                 }
             }
 
             & > div:nth-child(1) {
                 border-top: 1px solid #000;
-                // padding-top: 1rem;
             }
 
             & > div:nth-last-child(1) {
@@ -127,4 +136,9 @@
             }
         }
     }
+}
+
+.logo_smith {
+    height: 50px;
+    width: 100px;
 }
