--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -6,7 +6,7 @@
     width: 100%;
 
     @media screen and (min-width: 375px) {
-        max-width: 300px;
+        width: 300px;
     }
 
     &:hover,
