Refactor: Added logo and changed the font type for the application title

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -30,8 +30,17 @@
             text-decoration: none;
             color: #FFF;
 
-            h3 {
-                font-size: 1rem;
+            display: flex;
+            align-items: center;
+
+            .logo_title {
+                font-family: var(--secondary-font);
+                font-size: larger;
+            }
+
+            .logo_smith {
+                height: 50px;
+                width: 50px;
             }
         }
 
@@ -136,9 +145,4 @@
             }
         }
     }
-}
-
-.logo_smith {
-    height: 50px;
-    width: 100px;
 }
