--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -11,12 +11,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
-    padding: 1rem 1rem;
+    gap: 2rem;
+    padding: 1rem;
 
     h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
         letter-spacing: 1.5px;
+        font-family: var(--secondary-font);
     }
 
     .login_wrapper {
@@ -24,11 +25,11 @@
         border-radius: 0.5rem;
         display: flex;
         flex-direction: column;
-        gap: 1.5rem;
-        padding: 2rem 1.5rem;
+        gap: 1rem;
+        padding: 2rem 1rem;
         width: 100%;
         max-width: 400px;
-        box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+        box-shadow: 10px 10px 10px rgba(0,0,0,0.6);
 
         .login_group {
             display: flex;
@@ -52,22 +53,25 @@
                 text-decoration: none;
                 color: var(--theme-color);
                 font-size: 0.75rem;
+                &:hover {
+                    opacity: 0.6;
+                }
             }
         }
 
     }
 
-    @media screen and (min-width: 1140px) {
+    @media screen and (min-width: 768px) {
         .login_wrapper {
-            max-width: 550px;
-            padding: 3rem 2rem;
-            gap: 2rem;
+            max-width: 450px;
+            padding: 2.25rem 1.5rem;
+            gap: 1.5rem;
 
             .login_group {
-                gap: 1rem;
+                gap: 0.75rem;
 
                 label {
-                    font-size: 1rem;
+                    font-size: 0.85rem;
                 }
 
                 input, button {
@@ -76,12 +80,12 @@
             }
 
             h3 {
-                font-size: 1.5rem;
+                font-size: 1.25rem;
             }
 
             .login_control {
                 a {
-                    font-size: 1rem;
+                    font-size: 0.85rem;
                 }
             }
         }
@@ -90,4 +94,9 @@
 
 .alert {
     color: var(--alert-color);
+}
+
+.login_logo {
+    display: flex;
+    align-items: center;
 }
