--- a/src/pages/EditMovie/EditMovie.scss
+++ b/src/pages/EditMovie/EditMovie.scss
@@ -1,13 +1,3 @@
-.thumbnail_img {
-    
-    
-
-    img {
-        height: 200px;
-        width: 200px;
-        border-radius: 0.5rem;
-    }
-}
 
 .thumbnail_cont {
     display: flex;
@@ -42,4 +32,21 @@
 
 .remove_text {
     font-size: 0.75rem;
+}
+
+.edit_clear {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color);
+    position: absolute;
+    bottom: 0;
+
+    &:hover {
+        opacity: 0.7;
+        cursor: pointer;
+    }
 }
