--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -40,6 +40,11 @@
                 font-size: 0.75rem;
                 color: rgba(255,255, 255, 0.7);
             }
+
+            .errors {
+                font-size: 0.75rem;
+                color: var(--tertiary-color);
+            }
         }
 
         h3 {
