Feat: Added some required  validation rules for add Movie page

--- a/src/pages/AddMovie/AddMovie.scss
+++ b/src/pages/AddMovie/AddMovie.scss
@@ -111,3 +111,8 @@ button:disabled {
         object-fit: cover;
     }
 }
+
+.errors {
+    font-size: 0.75rem;
+    color: var(--tertiary-color);
+}
