--- a/src/pages/AddMovie/AddMovie.scss
+++ b/src/pages/AddMovie/AddMovie.scss
@@ -58,6 +58,10 @@
         label {
             font-size: 0.75rem;
             opacity: 0.6;
+
+            span {
+                color: var(--theme-color);
+            }
         }
 
         @media screen and (min-width: 768px){
